edited dummy variable set up

--- a/test.ipynb
+++ b/test.ipynb
@@ -293,18 +293,18 @@
     "    def apply(self, model, X, data):\n",
     "        games = data['games']\n",
     "        timeslots = data['timeslots']\n",
-    "        \n",
+    "        current_week = data['current_week']\n",
     "        weekly_games = defaultdict(list)\n",
     "\n",
     "        for t in timeslots:\n",
     "            for (t1, t2, grade) in games:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "                if key in X:\n",
+    "                if key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                    weekly_games[(t.week, t1)].append(X[key])\n",
     "                    weekly_games[(t.week, t2)].append(X[key])\n",
     "\n",
     "        for (week, team), game_vars in weekly_games.items():\n",
-    "            if week < 5:\n",
+    "            if week <= current_week:\n",
     "                continue\n",
     "            model.Add(sum(game_vars) <= 1)\n",
     "\n",
@@ -314,17 +314,17 @@
     "    def apply(self, model, X, data):\n",
     "        games = data['games']\n",
     "        timeslots = data['timeslots']\n",
-    "        \n",
+    "        current_week = data['current_week']\n",
     "        field_usage = defaultdict(list)\n",
     "\n",
     "        for t in timeslots:\n",
     "            for (t1, t2, grade) in games:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "                if key in X:\n",
+    "                if key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                    field_usage[(t.day, t.day_slot, t.week, t.field.name)].append(X[key])\n",
     "\n",
     "        for slot, game_vars in field_usage.items():\n",
-    "            if slot[2] < 5:\n",
+    "            if slot[2] <= current_week:\n",
     "                continue\n",
     "            model.Add(sum(game_vars) <= 1)\n",
     "\n",
@@ -342,7 +342,7 @@
     "        for t in timeslots:\n",
     "            for (t1, t2, grade) in games:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "                if key in X:\n",
+    "                if key in X: # Do not filter dummys here\n",
     "                    team_games[grade][t1].append(X[key])\n",
     "                    team_games[grade][t2].append(X[key])\n",
     "                    grade_games[grade][tuple(sorted((t1, t2)))].append(X[key])\n",
@@ -386,7 +386,7 @@
     "            for (t1, t2, grade) in games:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
     "\n",
-    "                if grade == 'PHL' and key in X:\n",
+    "                if grade == 'PHL' and key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                    club = get_club(t1, data['teams'])\n",
     "                    dup_2nds = get_duplicated_graded_teams(club, '2nd', data['teams'])\n",
     "                    for team in dup_2nds:\n",
@@ -403,7 +403,7 @@
     "            for (t1, t2, grade) in games:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
     "\n",
-    "                if grade == '2nd' and key in X:\n",
+    "                if grade == '2nd' and key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                    club = get_club(t1, data['teams'])\n",
     "                    for identifier in phl_games[(club, t1, t.week, t.day)]:\n",
     "                        if identifier[0] != '':\n",
@@ -473,8 +473,10 @@
     "        weeks = {t.week for t in data[\"timeslots\"]}\n",
     "        \n",
     "        for week in weeks:\n",
+    "\n",
     "            if week <= current_week:\n",
     "                continue\n",
+    "\n",
     "            for club in data[\"clubs\"]:\n",
     "                indicator = model.NewBoolVar(f\"is_gosford_vs_{club.name}_week{week}\")\n",
     "                \n",
@@ -488,7 +490,7 @@
     "                            t.day, t.day_slot, t.time, t.week,\n",
     "                            t.date, t.round_no, t.field.name, t.field.location\n",
     "                        )\n",
-    "                        if grade != \"PHL\" or key not in X:\n",
+    "                        if grade != \"PHL\" or key not in X or not t.day: # Skip dummy variables\n",
     "                            continue\n",
     "   \n",
     "                        if \"Gosford\" in t1 or \"Gosford\" in t2:\n",
@@ -519,7 +521,7 @@
     "                            t.day, t.day_slot, t.time, t.week,\n",
     "                            t.date, t.round_no, t.field.name, t.field.location\n",
     "                        )\n",
-    "                        if grade != \"2nd\" or key not in X:\n",
+    "                        if grade != \"2nd\" or key not in X or not t.day: # Skip dummy variables\n",
     "                            continue\n",
     "                        if any(team in {t1, t2} for team in club_2nd_teams):\n",
     "                            scheduled_vars.append(X[key])\n",
@@ -549,7 +551,7 @@
     "\n",
     "            for t in data['timeslots']:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "                if key in X:\n",
+    "                if key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                    if grade == 'PHL':\n",
     "                        playing_clubs = tuple(sorted((get_club(t1, data['teams']), get_club(t2, data['teams']))))\n",
     "                        phl_dict[playing_clubs][t.round_no].append(X[key])\n",
@@ -618,7 +620,7 @@
     "            for (t1, t2, grade) in games:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
     "\n",
-    "                if grade in ['PHL', '2nd'] and key in X:\n",
+    "                if grade in ['PHL', '2nd'] and key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                    if grade == 'PHL':\n",
     "                        # Stop PHL games across clubs from being played at the same time\n",
     "                        team_games[(t.week, t.day)][(t.day_slot, t.field.location)].append(X[key])\n",
@@ -696,7 +698,7 @@
     "#                     continue\n",
     "\n",
     "#                 key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "#                 if key in X:\n",
+    "#                 if key in X and t.day: # Ensure dummy timeslots not counted\n",
     "#                     if t.round_no + 1 <= num_rounds['max']:\n",
     "#                         team_games[t1][(t.round_no, t.round_no + 1)].append(X[key])\n",
     "#                         team_games[t2][(t.round_no, t.round_no + 1)].append(X[key])\n",
@@ -730,7 +732,7 @@
     "        for t in timeslots:\n",
     "            for (t1, t2, grade) in games:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "                if key in X:\n",
+    "                if key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                    if t.week + 1 <= num_rounds['max']:\n",
     "                        team_games[t1][(t.week, t.week + 1)].append(X[key])\n",
     "                        team_games[t2][(t.week, t.week + 1)].append(X[key])\n",
@@ -762,7 +764,7 @@
     "        for t in timeslots:\n",
     "            for (t1, t2, grade) in games:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "                if ('Maitland' in t1 or 'Maitland' in t2) and key in X:\n",
+    "                if ('Maitland' in t1 or 'Maitland' in t2) and key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                    relevant_team = t1 if 'Maitland' in t1 else t2\n",
     "                    other_team = t2 if relevant_team == t1 else t1\n",
     "                    if 'Maitland' in other_team:\n",
@@ -772,7 +774,7 @@
     "                    else:\n",
     "                        away_games[(relevant_team, other_team)].append(X[key])\n",
     "\n",
-    "                if ('Gosford' in t1 or 'Gosford' in t2) and key in X:\n",
+    "                if ('Gosford' in t1 or 'Gosford' in t2) and key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                    relevant_team = t1 if 'Gosford' in t1 else t2\n",
     "                    other_team = t2 if relevant_team == t1 else t1\n",
     "                    if 'Gosford' in other_team:\n",
@@ -820,7 +822,7 @@
     "    #     for t in timeslots:\n",
     "    #         for (t1, t2, grade) in games:\n",
     "    #             key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "    #             if ('Maitland' in t1 or 'Maitland' in t2) and key in X:\n",
+    "    #             if ('Maitland' in t1 or 'Maitland' in t2) and key in X and t.day: # Ensure dummy timeslots not counted\n",
     "    #                 relevant_team = t1 if 'Maitland' in t1 else t2\n",
     "    #                 other_team = t2 if relevant_team == t1 else t1\n",
     "    #                 if 'Maitland' in other_team:\n",
@@ -878,7 +880,7 @@
     "        for t in timeslots:\n",
     "            for (t1, t2, grade) in games:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "                if key in X:\n",
+    "                if key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                    # if t.round_no > 1 and t.round_no <= max_rounds - 1:\n",
     "                    #     game_dict[(t1, t2)][t.round_no - 1, t.round_no, t.round_no +1].append(X[key])\n",
     "                    # if t.round_no > 2:\n",
@@ -914,7 +916,7 @@
     "                    if t1 in [team1, team2] or t2 in [team1, team2]:\n",
     "                        for field in fields:\n",
     "                            key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, field.name, field.location)\n",
-    "                            if key in X:\n",
+    "                            if key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                                game_vars.append(X[key])\n",
     "                model.Add(sum(game_vars) <= 1)\n",
     "\n",
@@ -931,7 +933,7 @@
     "        for t in timeslots:\n",
     "            for (t1, t2, grade) in games:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "                if key in X:\n",
+    "                if key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                        if t.field.location != 'Newcastle International Hockey Centre':\n",
     "                            weeks[(t.week, t.field.location)].append(X[key])\n",
     "                            \n",
@@ -982,7 +984,7 @@
     "\n",
     "            for t in data['timeslots']:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "                if key in X:\n",
+    "                if key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                    playing_clubs = tuple(sorted((get_club(t1, data['teams']), get_club(t2, data['teams']))))\n",
     "                    grades_dict[grade][playing_clubs][t.round_no].append(X[key])\n",
     "             \n",
@@ -1028,7 +1030,7 @@
     "        for t in timeslots:\n",
     "            for (t1, t2, grade) in games:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "                if key in X:\n",
+    "                if key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                    timeslots_weekly[t.week][t.field.location][t.day_slot].append(X[key])\n",
     "                    games_per_location[t.week][t.field.location].append(X[key])\n",
     "                    games_per_field[t.week][t.field.name].append(X[key])\n",
@@ -1171,7 +1173,7 @@
     "            for (t1, t2, grade) in data['games']:\n",
     "                if \"Maitland\" in t1 or \"Maitland\" in t2:\n",
     "                    key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "                    if key in X:\n",
+    "                    if key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                        week = t.week\n",
     "                        if week not in maitland_games_per_week:\n",
     "                            maitland_games_per_week[week] = []\n",
@@ -1218,7 +1220,7 @@
     "                if \"Maitland Park\" in t.field.location:\n",
     "                    key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
     "\n",
-    "                    if key in X:  \n",
+    "                    if key in X and t.day: # Ensure dummy timeslots not counted \n",
     "                        away_club = get_club(t1, data['teams']) if \"Maitland\" in t2 else get_club(t2, data['teams'])  \n",
     "                        away_clubs_per_week[t.week][away_club].append(X[key]) \n",
     "\n",
@@ -1268,7 +1270,7 @@
     "            for (t1, t2, grade) in games:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
     "                \n",
-    "                if key in X and t.field.location == 'Newcastle International Hockey Centre':\n",
+    "                if key in X and t.field.location == 'Newcastle International Hockey Centre' and t.day: # Ensure dummy timeslots not counted\n",
     "                    club1 = get_club(t1, data['teams'])\n",
     "                    club2 = get_club(t2, data['teams'])\n",
     "\n",
@@ -1326,7 +1328,7 @@
     "            for (t1, t2, grade) in games:\n",
     "                key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
     "                \n",
-    "                if key in X and t.field.location == 'Newcastle International Hockey Centre':\n",
+    "                if key in X and t.field.location == 'Newcastle International Hockey Centre' and t.day: # Ensure dummy timeslots not counted\n",
     "                    club1 = get_club(t1, data['teams'])\n",
     "                    club2 = get_club(t2, data['teams'])\n",
     "\n",
@@ -1370,7 +1372,7 @@
     "            for (t1, t2, grade) in data['games']:\n",
     "                if t.field.location == \"Maitland Park\":\n",
     "                    key = (t1, t2, grade, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location)\n",
-    "                    if key in X:\n",
+    "                    if key in X and t.day: # Ensure dummy timeslots not counted\n",
     "                        maitland_games[t.week][t.day].append((t.day_slot, grade, X[key]))\n",
     "\n",
     "        for week, days in maitland_games.items():\n",
@@ -1703,7 +1705,7 @@
     "    \"\"\"\n",
     "    Optimized version of game filtering to improve performance while tracking unavailable games.\n",
     "    \"\"\"\n",
-    "    # Create games dictionary efficiently\n",
+    "    # Create games dictionary\n",
     "    games = {\n",
     "        (t1.name, t2.name, t1.grade): (t1, t2, t1.grade)\n",
     "        for i, t1 in enumerate(data['teams'])\n",
@@ -1717,7 +1719,7 @@
     "    teams = data['teams']\n",
     "    phl_game_times = data['phl_game_times']\n",
     "    day_time_map = data['day_time_map']\n",
-    "\n",
+    "    num_dummy_timeslots = data['num_dummy_timeslots']\n",
     "\n",
     "    X = {\n",
     "        (t1.name, t2.name, grade_name, t.day, t.day_slot, t.time, t.week, t.date, t.round_no, t.field.name, t.field.location):\n",
@@ -1777,10 +1779,10 @@
     "        }\n",
     "\n",
     "    print(f'PHL decision variables {len(phl_X)}')\n",
-    "    \n",
+    "\n",
     "    X.update(maitland_X)\n",
     "    X.update(phl_X)\n",
-    "    \n",
+    "\n",
     "    filtered_games = set(X.keys())  \n",
     "    unavailable_games = set()\n",
     "    conflicting_matchups = []\n",
@@ -2157,7 +2159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2540,7 +2542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2567,7 +2569,7 @@
     "# Total constraints in model: 7322 is rough count of hard constraints\n",
     "# up to AwayAtMaitlandGrouping()\n",
     "X_ = X_final\n",
-    "constraints =  [ EnsureEqualGamesAndBalanceMatchUps(), NoDoubleBookingTeamsConstraint(), NoDoubleBookingFieldsConstraint(), FiftyFiftyHomeandAway(), TeamConflictConstraint(), NoBackToBackByes(), MaitlandHomeGrouping(), AwayAtMaitlandGrouping(), EnsureUniqueTeamsEvery3Weeks(), PHLAndSecondGradeTimes(), PHL2ndAlignment(),  PHLAndSecondGradeAdjacency() , PHL2ndByeAlignment(), MaxMaitlandHomeWeekends(), ClubDayConstraint(),]#EnsureBestTimeslotChoices(), MinimiseClubsOnAFieldBroadmeadow(), MaximiseClubsPerTimeslotBroadmeadow(), PreferredTimesConstraint()]#,  MaitlandGradeOrder()] #,MinimizeLateGames(), ]\n",
+    "constraints =  [ EnsureEqualGamesAndBalanceMatchUps(), NoDoubleBookingTeamsConstraint(), NoDoubleBookingFieldsConstraint(), FiftyFiftyHomeandAway(), PHLAndSecondGradeTimes(), PHL2ndAlignment(),  PHLAndSecondGradeAdjacency() , PHL2ndByeAlignment(), TeamConflictConstraint(), NoBackToBackByes(), MaitlandHomeGrouping(), AwayAtMaitlandGrouping(), EnsureUniqueTeamsEvery3Weeks(),MaxMaitlandHomeWeekends(), ClubDayConstraint(),]#EnsureBestTimeslotChoices(), MinimiseClubsOnAFieldBroadmeadow(), MaximiseClubsPerTimeslotBroadmeadow(), PreferredTimesConstraint()]#,  MaitlandGradeOrder()] #,MinimizeLateGames(), ]\n",
     "X_outcome, X_solution, data = create_schedule(X=X_, data=data, constraints=constraints, model=model, conflicts=conflicts)\n"
    ]
   },
