--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1580,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2136,6 +2136,7 @@
     "     \n",
     "data = {'teams': TEAMS, 'grades': GRADES, 'fields': FIELDS, 'timeslots': TIMESLOTS, 'clubs': CLUBS, 'num_rounds': num_rounds, 'day_time_map': day_time_map, 'phl_game_times': phl_game_times, 'phl_preferences': phl_preferences, 'max_day_slot_per_field': max_day_slot_per_field, 'field_unavailabilities': field_unavailabilities, 'club_days': club_days}\n",
     "model = cp_model.CpModel()\n",
+    "data['num_dummy_timeslots'] = 3\n",
     "X_final, conflicts, unavailable_games = generate_X(UNAVAILABILITY_PATH, model, data)\n",
     "data['unavailable_games'] = unavailable_games\n",
     "data['preference_no_play'] = preference_no_play\n",
@@ -2159,7 +2160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2575,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2585,7 +2586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
